icons: Fix expander-down icon alignment
Fixes #578

--- a/theme/parts/icons.css
+++ b/theme/parts/icons.css
@@ -170,6 +170,12 @@ arrowscrollbox[orient="horizontal"] {
 .popup-notification-dropmarker .button-icon {
 	-moz-appearance: none !important;
 	list-style-image: url("../icons/pan-down-symbolic.svg") !important;
+}
+#sidebar-switcher-arrow,
+#viewButton .button-menu-dropmarker,
+.popup-notification-dropmarker .button-icon {
+	-moz-appearance: none !important;
+	list-style-image: url("../icons/pan-down-symbolic.svg") !important;
 	width: 16px !important;
 	height: 16px !important;
 }
